{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 365,
  "lineage": "5c383651-2787-2368-f510-6bb5bb4ad58e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948834064527:subnet/subnet-0fac1e733e4d3a2c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0fac1e733e4d3a2c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948834064527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default Subnet"
            },
            "tags_all": {
              "Name": "Default Subnet"
            },
            "vpc_id": "vpc-0185fbe7219ffdd86"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948834064527:vpc/vpc-0185fbe7219ffdd86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d033c856247046a7",
            "default_route_table_id": "rtb-0fb655eeeddb07787",
            "default_security_group_id": "sg-0a3d03a929afd6af8",
            "dhcp_options_id": "dopt-0747339b292cab643",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0185fbe7219ffdd86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb655eeeddb07787",
            "owner_id": "948834064527",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Instance1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:948834064527:instance/i-02e50104206a5b2e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e50104206a5b2e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "terra-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0086a20f4bd24b22c"
              }
            ],
            "primary_network_interface_id": "eni-0086a20f4bd24b22c",
            "private_dns": "ip-172-31-47-27.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.27",
            "public_dns": "ec2-43-205-216-72.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.216.72",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036bea81fdfa1f626",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "my_instane_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fac1e733e4d3a2c9",
            "tags": {
              "Dept": "Operations",
              "Name": "Instance1"
            },
            "tags_all": {
              "Dept": "Operations",
              "Name": "Instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05068215418eb6e37"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "948834064527",
            "id": "i-02e50104206a5b2e2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_default_subnet.public_ip",
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948834064527:security-group/sg-05068215418eb6e37",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-05068215418eb6e37",
            "ingress": [],
            "name": "my_instane_sg",
            "name_prefix": "",
            "owner_id": "948834064527",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_instane_sg"
            },
            "tags_all": {
              "Name": "my_instane_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0185fbe7219ffdd86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "948834064527",
            "id": "sg-05068215418eb6e37",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-sg-rule-out1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Outbound Internet access",
            "from_port": 0,
            "id": "sgrule-966270902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-05068215418eb6e37",
            "security_group_rule_id": "sgr-0e4196971cb9bf930",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-sg-rule_custom_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow custom tcp access",
            "from_port": 8080,
            "id": "sgrule-1253769420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05068215418eb6e37",
            "security_group_rule_id": "sgr-05e9cfb5e37f334e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-sg-rule_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http access",
            "from_port": 80,
            "id": "sgrule-865738384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05068215418eb6e37",
            "security_group_rule_id": "sgr-03431aef769275152",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-sg-rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ssh access",
            "from_port": 22,
            "id": "sgrule-2062531803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05068215418eb6e37",
            "security_group_rule_id": "sgr-0ef70d16a4d98df08",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my-sg"
          ]
        }
      ]
    }
  ]
}